style: fix overflowing flexboxes

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -16,6 +16,10 @@ html {
   width: 100%;
 }
 
+html {
+  background: var(--background-color);
+}
+
 .App {
   height: 100%;
   width: 100%;
